pom.xml and other misc stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-.metadata/
-.settings/
+target/*
+.settings/*
+.classpath
 .project
-/target
+.factorypath
+.attach_pid*
 .idea
-MDS.iml
-maven
-target
+*.iml
+/target
+.sts4-cache/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+_site/
